monitoring/domain-center/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain-center
  namespace: monitoring
spec:
  selector:
    app: domain-center
  ports:
  - port: 80
    targetPort: 8080
