monitoring/domain-center/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domain-center
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: domain-center
            port:
              number: 80
